[package]
name = "airnow-aqi-rs"
version = "0.1.0"
authors = ["ssnover95 <sws7379@rit.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12.4"
reqwest = { version = "0.10", features = ["blocking", "json"] }