[package]
name = "airnow-aqi-rs"
version = "0.1.0"
authors = ["Shane Snover <ssnover95@gmail.com>"]
edition = "2018"

[lib]
name = "airnow_aqi"
path = "src/lib.rs"

[[bin]]
name = "test"
path = "src/main.rs"

[dependencies]
json = "0.12.4"
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"