[package]
name = "airnow-aqi-rs"
version = "0.1.0"
authors = ["Shane Snover <ssnover95@gmail.com>"]
edition = "2018"
description = "A convenience library for querying from the EPA AirNow API for Air Quality Index data."
license = "MIT"
readme = "README.md"

[lib]
name = "airnow_aqi"
path = "src/lib.rs"

[[bin]]
name = "test"
path = "src/main.rs"

[dependencies]
json = "0.12.4"
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"